--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
   "plugins": ["prettier"],
   "extends": ["next/core-web-vitals", "prettier"],
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "@next/next/google-font-display": "off"
   }
 }
