--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.4.0",
+    "@types/mock-fs": "^4.13.1",
     "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.4.2",
     "jest-environment-jsdom": "^29.4.2",
+    "mock-fs": "^5.2.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
   },
